--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "com.solidalloy.util": "1.40.0",
     "com.unity.settings-manager": "1.0.3",
-    "com.solidalloy.unity-dropdown": "1.2.0"
+    "com.solidalloy.unity-dropdown": "https://github.com/finikigames/UnityDropdown.git"
   },
   "keywords": [
     "dropdown",
